[project]
name = "importless"
version = "0.1.0"
description = "Deboalt your code by removing unused import statements"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Junaid Rahman" }
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/Junaid433/importless"
Repository = "https://github.com/Junaid433/importless"

[project.scripts]
importless = "importless.cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "docs", "examples", "scripts"]

[tool.setuptools.package-data]
"importless" = ["py.typed"]

[tool.setuptools.exclude-package-data]
"importless" = ["tests/*", "examples/*", "scripts/*", "docs/*"]
